jclass/snapshots/jdk-java-lang-VirtualMachineError.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public abstract class java.lang.VirtualMachineError extends java.lang.Error
  minor version: 0
  major version: 68
  flags: (0x0421) ACC_PUBLIC, ACC_SUPER, ACC_ABSTRACT
  this_class: #16                      //java/lang/VirtualMachineError
  super_class: #2                      //java/lang/Error
  interfaces: 0, fields: 1, methods: 4, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Error."<init>":()V
   #2 = Class              #4               // java/lang/Error
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Error
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Methodref          #2.#8            // java/lang/Error."<init>":(Ljava/lang/String;)V
   #8 = NameAndType        #5:#9            // "<init>":(Ljava/lang/String;)V
   #9 = Utf8               (Ljava/lang/String;)V
  #10 = Methodref          #2.#11           // java/lang/Error."<init>":(Ljava/lang/String;Ljava/lang/Throwable;)V
  #11 = NameAndType        #5:#12           // "<init>":(Ljava/lang/String;Ljava/lang/Throwable;)V
  #12 = Utf8               (Ljava/lang/String;Ljava/lang/Throwable;)V
  #13 = Methodref          #2.#14           // java/lang/Error."<init>":(Ljava/lang/Throwable;)V
  #14 = NameAndType        #5:#15           // "<init>":(Ljava/lang/Throwable;)V
  #15 = Utf8               (Ljava/lang/Throwable;)V
  #16 = Class              #17              // java/lang/VirtualMachineError
  #17 = Utf8               java/lang/VirtualMachineError
  #18 = Utf8               serialVersionUID
  #19 = Utf8               J
  #20 = Utf8               ConstantValue
  #21 = Long               4161983926571568670l
  #23 = Utf8               Code
  #24 = Utf8               LineNumberTable
  #25 = Utf8               LocalVariableTable
  #26 = Utf8               this
  #27 = Utf8               Ljava/lang/VirtualMachineError;
  #28 = Utf8               message
  #29 = Utf8               Ljava/lang/String;
  #30 = Utf8               cause
  #31 = Utf8               Ljava/lang/Throwable;
  #32 = Utf8               SourceFile
  #33 = Utf8               VirtualMachineError.java
{
  private static final long serialVersionUID;
    descriptor: J
    flags: (0x001a) ACC_PRIVATE, ACC_STATIC, ACC_FINAL
    ConstantValue: long 4161983926571568670l
  
  public java.lang.VirtualMachineError();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Error."<init>":()V
         4: return                  
      LineNumberTable:
        line 44: 0
        line 45: 4
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Ljava/lang/VirtualMachineError;
  
  public java.lang.VirtualMachineError(java.lang.String);
    descriptor: (Ljava/lang/String;)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: invokespecial #7                  // Method java/lang/Error."<init>":(Ljava/lang/String;)V
         5: return                  
      LineNumberTable:
        line 54: 0
        line 55: 5
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Ljava/lang/VirtualMachineError;
           0        6     1  message Ljava/lang/String;
  
  public java.lang.VirtualMachineError(java.lang.String, java.lang.Throwable);
    descriptor: (Ljava/lang/String;Ljava/lang/Throwable;)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=3, args_size=3
         0: aload_0                 
         1: aload_1                 
         2: aload_2                 
         3: invokespecial #10                 // Method java/lang/Error."<init>":(Ljava/lang/String;Ljava/lang/Throwable;)V
         6: return                  
      LineNumberTable:
        line 72: 0
        line 73: 6
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        7     0  this   Ljava/lang/VirtualMachineError;
           0        7     1  message Ljava/lang/String;
           0        7     2  cause  Ljava/lang/Throwable;
  
  public java.lang.VirtualMachineError(java.lang.Throwable);
    descriptor: (Ljava/lang/Throwable;)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: invokespecial #13                 // Method java/lang/Error."<init>":(Ljava/lang/Throwable;)V
         5: return                  
      LineNumberTable:
        line 88: 0
        line 89: 5
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Ljava/lang/VirtualMachineError;
           0        6     1  cause  Ljava/lang/Throwable;
}
SourceFile: "VirtualMachineError.java"
