jclass/snapshots/jdk-java-nio-Buffer$1.class.snap
---
source: jclass/src/lib.rs
expression: display
---
class java.nio.Buffer$1 extends java.lang.Object implements java.util.function.Function<java.lang.String, java.lang.IndexOutOfBoundsException>
  minor version: 0
  major version: 68
  flags: (0x0020) ACC_SUPER
  this_class: #13                      //java/nio/Buffer$1
  super_class: #2                      //java/lang/Object
  interfaces: 1, fields: 0, methods: 3, attributes: 5
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
   #2 = Class              #4               // java/lang/Object
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Object
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Class              #8               // java/lang/IndexOutOfBoundsException
   #8 = Utf8               java/lang/IndexOutOfBoundsException
   #9 = Methodref          #7.#3            // java/lang/IndexOutOfBoundsException."<init>":()V
  #10 = Class              #11              // java/lang/String
  #11 = Utf8               java/lang/String
  #12 = Methodref          #13.#14          // java/nio/Buffer$1.apply:(Ljava/lang/String;)Ljava/lang/IndexOutOfBoundsException;
  #13 = Class              #15              // java/nio/Buffer$1
  #14 = NameAndType        #16:#17          // apply:(Ljava/lang/String;)Ljava/lang/IndexOutOfBoundsException;
  #15 = Utf8               java/nio/Buffer$1
  #16 = Utf8               apply
  #17 = Utf8               (Ljava/lang/String;)Ljava/lang/IndexOutOfBoundsException;
  #18 = Class              #19              // java/util/function/Function
  #19 = Utf8               java/util/function/Function
  #20 = Utf8               Code
  #21 = Utf8               LineNumberTable
  #22 = Utf8               LocalVariableTable
  #23 = Utf8               this
  #24 = Utf8               Ljava/nio/Buffer$1;
  #25 = Utf8               s
  #26 = Utf8               Ljava/lang/String;
  #27 = Utf8               (Ljava/lang/Object;)Ljava/lang/Object;
  #28 = Utf8               MethodParameters
  #29 = Utf8               Signature
  #30 = Utf8               Ljava/lang/Object;Ljava/util/function/Function<Ljava/lang/String;Ljava/lang/IndexOutOfBoundsException;>;
  #31 = Utf8               SourceFile
  #32 = Utf8               Buffer.java
  #33 = Utf8               EnclosingMethod
  #34 = Class              #35              // java/nio/Buffer
  #35 = Utf8               java/nio/Buffer
  #36 = Utf8               NestHost
  #37 = Utf8               InnerClasses
{
  java.nio.Buffer$1();
    descriptor: ()V
    flags: (0x0000) 
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 753: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Ljava/nio/Buffer$1;
  
  public java.lang.IndexOutOfBoundsException apply(java.lang.String);
    descriptor: (Ljava/lang/String;)Ljava/lang/IndexOutOfBoundsException;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=2, locals=2, args_size=2
         0: new           #7                  // class java/lang/IndexOutOfBoundsException
         3: dup                     
         4: invokespecial #9                  // Method java/lang/IndexOutOfBoundsException."<init>":()V
         7: areturn                 
      LineNumberTable:
        line 756: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        8     0  this   Ljava/nio/Buffer$1;
           0        8     1  s      Ljava/lang/String;
  
  public java.lang.Object apply(java.lang.Object);
    descriptor: (Ljava/lang/Object;)Ljava/lang/Object;
    flags: (0x1041) ACC_PUBLIC, ACC_BRIDGE, ACC_SYNTHETIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: checkcast     #10                 // class java/lang/String
         5: invokevirtual #12                 // Method apply:(Ljava/lang/String;)Ljava/lang/IndexOutOfBoundsException;
         8: areturn                 
      LineNumberTable:
        line 753: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  this   Ljava/nio/Buffer$1;
    MethodParameters:
      Name                             Flags
      <no name>                        synthetic 
}
Signature: #30                         // Ljava/lang/Object;Ljava/util/function/Function<Ljava/lang/String;Ljava/lang/IndexOutOfBoundsException;>;
SourceFile: "Buffer.java"
EnclosingMethod: #34.#0  // java.nio.Buffer
NestHost: class java/nio/Buffer
InnerClasses:
  #13;                                        // class java/nio/Buffer$1
